--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.1",
     "node-thermal-printer": "^4.5.0",
     "pdf-to-printer": "^5.6.0",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
