--- a/client/production.env
+++ b/client/production.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://xlnhkzxmsa.execute-api.eu-west-2.amazonaws.com
+VITE_API_URL=https://r0gfamvyd8.execute-api.eu-west-2.amazonaws.com
