--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -4,7 +4,7 @@ service: RoyalRaptorPOS
 
 provider:
   name: aws
-  runtime: nodejs22.x
+  runtime: nodejs20.x
   region: eu-west-2
   timeout: 30
   memorySize: 1024
@@ -17,7 +17,7 @@ provider:
     ACCESS_TOKEN_EXPIRATION: 15m
     REFRESH_TOKEN_EXPIRATION: 30d
     CORS_ORIGIN: "http://localhost:5173"
-    CLIENT_ORIGINS: "http://localhost:5173,http://localhost:5174,https://xlnhkzxmsa.execute-api.eu-west-2.amazonaws.com"
+    CLIENT_ORIGINS: "http://localhost:5173,http://localhost:5174,https://r0gfamvyd8.execute-api.eu-west-2.amazonaws.com"
     HTTPS: true
     NODE_ENV: production
     MASTER_PASSWORD: 123@@213312_321=23sfdSAV
